# lordguardian-bot

./: .env_exemple  .gitignore  Dockerfile  README.md  arbo.py  config_example.json  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  test_manual.md
.github/: dependabot.yml
.github/workflows/: docker-build.yml  python-tests.yml
docs/: commands.md  setup.md
scripts/: __init__.py
src/: __init__.py
src/api/: __init__.py
src/bot/: __init__.py  bot.py  bot.py.backup  extensions.py  keep_alive.py
src/cogs/: __init__.py  admin.py  casino.py  economy.py  economy.py.backup  fun.py  help_cog.py  leveling.py  leveling.py.backup  moderation.py  moderation.py.backup  shop.py  tickets.py  tickets.py.backup  utilities.py  utilities.py.backup  welcome.py  welcome.py.backup
src/core/: __init__.py  config.py  database.py  embeds.py  errors.py  events.py  logger.py
src/models/: __init__.py  economy.py  guild.py  ticket.py  user.py
src/utils/: __init__.py  converters.py  helpers.py  pagination.py  permissions.py  time_utils.py
src/web/: __init__.py  app.py  routes.py
src/web/templates/: base.html  dashboard.html  guild.html  login.html
tests/: __init__.py
